changed name to CapyReads

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MangaReact",
-  "name": "MangaReact App",
+  "short_name": "CapyReads",
+  "name": "CapyReads App",
   "icons": [
     {
       "src": "favicon.ico",
